tests/negative/gold/define_test.gold
tests/negative/define_test.toit:20:3: error: Left-hand side of definition must be an identifier
  4 := 499
  ^
tests/negative/define_test.toit:21:3: error: Left-hand side of definition must be an identifier
  (unresolved) ::= 42
  ^
tests/negative/define_test.toit:21:4: error: Unresolved identifier: 'unresolved'
  (unresolved) ::= 42
   ^~~~~~~~~~
tests/negative/define_test.toit:17:5: error: Definition of 'field' shadows outer field definition
    field := unresolved
    ^~~~~
tests/negative/define_test.toit:4:3: note: Shadowed field 'field'
  field := null
  ^~~~~
tests/negative/define_test.toit:17:14: error: Unresolved identifier: 'unresolved'
    field := unresolved
             ^~~~~~~~~~
tests/negative/define_test.toit:6:5: error: Definition of 'field' shadows outer field definition
    field := 499
    ^~~~~
tests/negative/define_test.toit:4:3: note: Shadowed field 'field'
  field := null
  ^~~~~
tests/negative/define_test.toit:10:5: error: Definition of 'local' shadows earlier definition
    local := "String"
    ^~~~~
tests/negative/define_test.toit:7:5: note: Earlier definition of 'local'
    local := 42
    ^~~~~
tests/negative/define_test.toit:13:5: error: Definition of 'param' shadows earlier definition
    param := 44
    ^~~~~
tests/negative/define_test.toit:5:7: note: Earlier definition of 'param'
  foo param:
      ^~~~~
tests/negative/define_test.toit:14:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/define_test.toit:9:11: error: Class 'int' does not have any method 'copy'
    local.copy 1
          ^~~~
tests/negative/define_test.toit:11:11: error: Class 'string' does not have any method 'abs'
    local.abs
          ^~~
Compilation failed.
